[getdata] Solution for quiz 1
Code used to solve Quiz #1 of the Coursera getdata class.
Problem 5 is particularly interesting because there are some special
techniques for statistical measures that are used. The guide for this
was obtained from the forums of the class.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # History files
 .Rhistory
 .Rapp.history
@@ -14,4 +16,5 @@ vignettes/*.pdf
 
 # Assignment files
 specdata
-.DS_Store
+getdata/data
+.RData
